# TIPE_TMD

./: .gitignore  .gitmodules  DM TIPE TMD.aux  DM TIPE TMD.tex  DM.aux  DM.tex  README.md  test_ressort_simple.py
Analyse/: Bode a vide.csv  Bode.py  Pendule 1 masse à 3cm de la barre.csv  Pendule 1 masse à 3cm de la barre_norme.csv  Sans masse, tige seule faible amplitude.csv  Sans masse, tige seule faible amplitude_norme.csv  Test_Bode_manuel.py  masse en haut faible amplitude.csv  masse en haut faible amplitude_norme.csv  pendule 1 masse au plus bas test bof.csv  pendule 1 masse au plus bas test bof_norme.csv  pendule 1 masse au plus bas.csv  pendule 1 masse au plus bas_norme.csv  pendule 7 cm du haut pendule fixe axe.csv  pendule 7 cm du haut pendule fixe axe_norme.csv  pendule 7 mm faible amplitude.csv  pendule 7 mm faible amplitude_norme.csv  pendule au plus bas faible amplitude.csv  pendule au plus bas faible amplitude_norme.csv  penduleb 7mm sans pendule faible amplitude.csv  penduleb 7mm sans pendule faible amplitude_norme.csv
Analyse finale basse amplitude/: Bode.py  comparer modèle et réalité.py  coup de vent.csv  masse en bas (9.4gcm) de  100g.csv  masse à 3 cm de l'axe de 100g.csv  masse à 5,5 cm de l'axe de 73,3 g.csv  masse à 8cm de 73,3 g.csv  masse à 9.4 cm de 73,3g de l'axe.csv  pendule à 5 cm de l'axe , 100g.csv  pipo.py  sans pendule.csv
Beamer/: beamer_presentation_v3.aux  beamer_presentation_v3.fdb_latexmk  beamer_presentation_v3.fls  beamer_presentation_v3.nav  beamer_presentation_v3.out  beamer_presentation_v3.snm  beamer_presentation_v3.tex  beamer_presentation_v3.toc
Circuit imprimé/: QR code.py
Firmware_CI/fw/: CMakeLists.txt  Motor_Control.cpp  Motor_Control.h  PID.cpp  PID.h  fw.cpp  hw_config.cpp  logging.cpp  logging.h
MCOT/: Titre.docx
Mesures/: Accélération à vide .ods  Coefficient de raideur.py  accélération à vide.py  étalonnage accéeléromètre.csv
Simulation/: Simulation.py  test_pytest.py
raspberry pico/: flash.py  receiver.py
rendu/: Axe_linéaire.wrl  base.step  base.wrl  haut.wrl
simulation naive/: Test1.py  lib.py  naive.py  test_lib.py
test axe linéaire/: Pendule attache.SLDPRT  Pendule attache.STL  assemblé.SLDASM  assemblé.SLDDRW  base.SLDPRT  base.STL  glissière.SLDPRT  glissière.STL  oscillant.SLDPRT  (+11 more)
(+455 files in other folders)
